src/test/minic/success/test45.block
test45 {
   // No error: Initializing a record variable containing two integer fields with an integer sequence value of size 2
   // Initializing a variable of the same type with the previous record.
   struct P { int x; int y; } p = { 3, 4};
   p.x = 2;
}